[package]
name = "which"
version = "0.1.0"
edition = "2021"
description = "A command line tool to find the path of an executable"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = "4.2.4"
colored = "2"
